# floww

./: .env.example  .gitignore  CLAUDE.md  CRAWLER_BLOCKERS.md  CRAWLER_ENGINE_PLAN.md  Dockerfile  IMPLEMENTATION_PLAN.md  INTERACTIVE_CRAWLING.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  SIMILARITY_DETECTION.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  package.json  setup.sh  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: cli.ts  index.ts
backend/src/config/: env.ts
backend/src/db/: client.ts
backend/src/examples/: similarity-detection-demo.ts
backend/src/middleware/: auth.ts  common.ts  rate-limit.ts  tenant.ts
backend/src/modules/analysis/: routes.ts
backend/src/modules/archive/: routes.ts
backend/src/modules/auth/: routes.ts
backend/src/modules/crawl/: routes.ts  service.ts
backend/src/modules/documents/: routes.ts
backend/src/modules/graph/: routes.ts
backend/src/modules/projects/: routes.ts
backend/src/services/ai/: analysis-service.ts  llm-client.ts
backend/src/services/archive/: backup.ts  cleanup.ts  storage.ts
backend/src/types/: schemas.ts
backend/src/utils/: auth.ts  config-validator.ts  errors.ts  logger.ts  sanitize.ts
crawler-engine/: package.json
crawler-engine/src/: config.ts  crawler.ts  index.ts  types.ts
crawler-engine/src/__tests__/: config.test.ts  hooks.test.ts  navigation.test.ts  pipeline.test.ts  queue.test.ts  redirect-guard.test.ts  retry-handler.test.ts  similarity.test.ts  stats.test.ts
crawler-engine/src/browser/: accessibility-tree.ts  browser-instance.ts  browser-pool.ts  cdp-session.ts  challenge-handler.ts  content-extractor.ts  cookie-banner.ts  dom-indexer.ts  form-submitter.ts  page-handler.ts  popup-dismisser.ts  resource-blocker.ts  session-guard.ts  spa-navigator.ts  stealth.ts  visibility-filter.ts  watchdog.ts
crawler-engine/src/checkpoint/: checkpoint.ts
crawler-engine/src/events/: event-types.ts
crawler-engine/src/hooks/: hook-manager.ts  types.ts
crawler-engine/src/pipeline/: content-pipeline.ts  processor-interface.ts
crawler-engine/src/proxy/: proxy-rotator.ts
crawler-engine/src/queue/: memory-queue.ts  queue-interface.ts  redis-queue.ts  request.ts
crawler-engine/src/retry/: retry-handler.ts
crawler-engine/src/scaling/: autoscaler.ts  system-monitor.ts
crawler-engine/src/session/: session-pool.ts  session.ts
crawler-engine/src/stats/: error-tracker.ts  statistics.ts
crawler-engine/src/strategy/: block-detector.ts  navigation.ts  redirect-guard.ts  robots.ts  sitemap.ts
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: DocumentsPanel.module.css  DocumentsPanel.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  InteractiveCrawlBanner.css  InteractiveCrawlBanner.module.css  InteractiveCrawlBanner.tsx  InteractiveCrawlDialog.css  InteractiveCrawlDialog.module.css  InteractiveCrawlDialog.tsx  Toast.module.css  Toast.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts
frontend/src/layouts/: AppLayout.module.css  AppLayout.tsx  AuthLayout.module.css  AuthLayout.tsx
frontend/src/pages/: ArchiveBrowser.module.css  ArchiveBrowser.tsx  Dashboard.module.css  Dashboard.tsx  GraphExplorer.module.css  GraphExplorer.tsx  ProjectCreate.module.css  ProjectCreate.tsx  ProjectDetail.module.css  ProjectDetail.tsx  ProjectList.module.css  ProjectList.tsx
frontend/src/styles/: animations.ts  global.css  tokens.css
frontend/src/types/: index.ts
src/floww/api/: auth.py  server.py
src/floww/archive/: __init__.py
src/floww/core/: config.py
(+61 files in other folders)
